# n2pkvna

./: .gitignore  Makefile.am  README  README-EXAMPLES  configure.ac
.github/workflows/: c.yml  release.yml  test.yml
debian/: changelog  control  copyright  n2pkvna-dev.examples  n2pkvna-gui.docs  n2pkvna-gui.install  n2pkvna.docs  n2pkvna.install  not-installed
doc/: Makefile.am  index.html  style.css
doc/html/: Makefile.am  calibrate.html  generate.html  make-calibration-diagrams  make-setup-diagrams  measure.html  quick_start.html  setup.html
firmware/: 85-n2pkvna.rules  85-n2pkvna.rules.in  Makefile.am  n2pkvna-v4-500.hex  n2pkvna-v4.hex  n2pkvna-v5-500.hex  n2pkvna-v5.hex
rpm/: Makefile.am  n2pkvna.spec.in
src/: Makefile.am  TODO
src/libn2pkvna/: Makefile.am  archdep.c  archdep.h  libn2pkvna-example.c  n2pkvna.3  n2pkvna.h  n2pkvna_error.c  n2pkvna_generate.c  n2pkvna_hardware.c  n2pkvna_internal.h  n2pkvna_open.c  n2pkvna_parse_address.c  n2pkvna_parse_config.c  n2pkvna_reset.c  n2pkvna_save.c  n2pkvna_scan.c  n2pkvna_switch.c
src/n2pkvna/: Makefile.am  attenuate.c  attenuate.h  cal_standard.c  cal_standard.h  cal_std.h  calibrate.c  calibrate.h  cf.c  cf.h  cli.c  cli.h  configure.c  configure.h  convert.c  convert.h  generate.c  generate.h  main.c  main.h  measure.c  measure.h  measurement.c  measurement.h  message.c  message.h  n2pkvna.1  properties.c  properties.h  setup.c  setup.h  switch.c  switch.h
src/n2pkvna-gui/: Makefile.am  make-icon.pl  n2pkvna-gui.pl  n2pkvna.desktop  n2pkvna.glade
tools/: install-libvna-deb  install-libvna-rpm  make-rpm
